@@ -1,3 +1,10 @@
+2006-02-18  Callum McKenzie  <callum@spooky-possum.org>
+
+	* games-scores.c: 
+	* games-scores-dialog.gob: Fixes to allow NULL categories to work
+	as desired. This includes adding a dummy category for use when we
+	want an anonymous category. Should fix bug #331613.
+
 2006-02-15  Callum McKenzie  <callum@spooky-possum.org>
 
 	* games-setgid-io.c: #include <stdlib.h> for exit ()
